# masova-support

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MIGRATION.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: env.example  logging.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_PHASES.md
scripts/: run-tests.sh  start-chat.sh  start-web.sh  test-e2e.sh
src/masova_agent/: __init__.py  agent.py  chat.py  main.py
src/masova_agent/agents/: __init__.py  churn_prevention_agent.py  demand_forecasting_agent.py  dynamic_pricing_agent.py  inventory_reorder_agent.py  kitchen_coach_agent.py  review_response_agent.py  shift_optimisation_agent.py
src/masova_agent/core/: __init__.py  agent.py  redis_session_service.py
src/masova_agent/data/: __init__.py  models.py  repositories.py
src/masova_agent/exceptions/: __init__.py
src/masova_agent/scheduler/: __init__.py  scheduler.py
src/masova_agent/services/: __init__.py  customer_service.py  location_service.py  order_service.py
src/masova_agent/tools/: __init__.py  backend_tools.py  system_briefing.py
src/masova_agent/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_agents.py  test_backend_tools.py  test_connection.py  test_redis_session.py  test_regression.py  test_scenarios.py
