[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masova-agent"
version = "0.1.0"
description = "MaSoVa Customer Support AI Agent built with Google ADK"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "Proprietary"}
authors = [
    {name = "MaSoVa Development Team"}
]
keywords = ["ai", "agent", "customer-support", "google-adk", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-adk==1.25.0",
    "google-genai==1.63.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.4.1",
]

[project.scripts]
masova-chat = "masova_agent.chat:main"
masova-test = "masova_agent.test_scenarios:main"

[project.urls]
Homepage = "https://github.com/masova/masova-support"
Documentation = "https://github.com/masova/masova-support/blob/main/README.md"
Repository = "https://github.com/masova/masova-support"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
